Настроено отображение второстепенных новостей на широком экране

--- a/src/index.html
+++ b/src/index.html
@@ -348,80 +348,108 @@
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
                                         <div class="wrap_new_img">
-                                            <a href="">
-                                                <img src="images/content/mod_news/new_2.jpg" alt="">
-                                            </a>
+                                            <img src="images/content/mod_news/new_2.jpg" alt="">
                                         </div>
-                                        <div class="data">24 мая 2018</div>
-                                        <div class="title_new">
-                                            <h3>
-                                                <a href="">
-                                                    Выявлена самая верная порода собак.
-                                                </a>
+                                        <div class="wrap_text">
+                                            <div class="data">24 мая 2018</div>
+                                            <div class="title_new">
+                                                <h3>
+                                                    <a href="">
+                                                        Выявлена самая верная порода собак.
+                                                    </a>
 
-                                            </h3>
+                                                </h3>
+                                            </div>
+                                            <div class="text_new">
+                                                <p>
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+                                                    consequatur cupiditate dolore dolorem ducimus eligendi eveniet,
+                                                    fugiat ipsa minima natus quae quam quibusdam quisquam recusandae,
+                                                    repudiandae similique vel vitae voluptatibus?
+                                                </p>
+                                                <p>
+                                                    <a href="#" class="link_more">
+                                                        <span>Подробнее</span>
+                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                                    </a>
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
                                         <div class="wrap_new_img">
-                                            <a href="">
-                                                <img src="images/content/mod_news/new_3.jpg" alt="">
-                                            </a>
+                                            <img src="images/content/mod_news/new_3.jpg" alt="">
                                         </div>
-                                        <div class="data">26 мая 2018</div>
-                                        <div class="title_new">
-                                            <h3>
-                                                <a href="">
-                                                    Отправляясь в поход с вашим питомцем учтите эти
-                                                    особенности...Отправляясь в поход с вашим питомцем учтите эти
-                                                    особенности
-                                                </a>
-                                            </h3>
+                                        <div class="wrap_text">
+                                            <div class="data">24 мая 2018</div>
+                                            <div class="title_new">
+                                                <h3>
+                                                    <a href="">
+                                                        Отправляясь в поход с вашим питомцем учтите эти
+                                                        особенности...Отправляясь в поход с вашим питомцем учтите эти
+                                                        особенности
+                                                    </a>
+
+                                                </h3>
+                                            </div>
+                                            <div class="text_new">
+                                                <p>
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+                                                    consequatur cupiditate dolore dolorem ducimus eligendi eveniet,
+                                                    fugiat ipsa minima natus quae quam quibusdam quisquam recusandae,
+                                                    repudiandae similique vel vitae voluptatibus?
+                                                </p>
+                                                <p>
+                                                    <a href="#" class="link_more">
+                                                        <span>Подробнее</span>
+                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                                    </a>
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="link_news">
-                                    <div class="new">
-                                        <div class="datatime">
-                                            24.09.2018
-                                        </div>
-                                        <h3>
-                                            <a href="">
-                                                На торгах 21 декабря российский рубль ускорил падение
-                                            </a>
-                                        </h3>
-
-                                    </div>
-                                    <div class="new">
-                                        <div class="datatime">
-                                            08.07.2018
-                                        </div>
-                                        <h3>
-                                            <a href="">
-                                                Генпрокурор рассказал, как будет выполняться поручение Лукашенко
-                                                «ужесточить борьбу с коррупцией
-                                            </a>
-                                        </h3>
-
-                                    </div>
-                                    <div class="new">
-                                        <div class="datatime">
-                                            05.04.2018
-                                        </div>
-                                        <h3>
-                                            <a href="">
-                                                На торгах 21 декабря российский рубль ускорил падение
-                                            </a>
-                                        </h3>
-
-                                    </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="link_news">
+                            <div class="new">
+                                <div class="datatime">
+                                    24.09.2018
                                 </div>
+                                <h3>
+                                    <a href="">
+                                        На торгах 21 декабря российский рубль ускорил падение
+                                    </a>
+                                </h3>
+
+                            </div>
+                            <div class="new">
+                                <div class="datatime">
+                                    08.07.2018
+                                </div>
+                                <h3>
+                                    <a href="">
+                                        Генпрокурор рассказал, как будет выполняться поручение Лукашенко
+                                        «ужесточить борьбу с коррупцией
+                                    </a>
+                                </h3>
+
+                            </div>
+                            <div class="new">
+                                <div class="datatime">
+                                    05.04.2018
+                                </div>
+                                <h3>
+                                    <a href="">
+                                        На торгах 21 декабря российский рубль ускорил падение
+                                    </a>
+                                </h3>
 
                             </div>
                         </div>
