Во второстепенные новости модуля новостей добавлено плавное всплытие текста с кнопкой ссылки

--- a/src/index.html
+++ b/src/index.html
@@ -332,13 +332,13 @@
                                         recusandae repellendus sint? Beatae consequatur cupiditate modi porro quasi
                                         voluptatum.
                                     </p>
-                                    <p>
-                                        <a href="#" class="link_more">
-                                            <span>Подробнее</span>
-                                            <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                        </a>
-                                    </p>
                                 </div>
+                            </div>
+                            <div class="link_wrap">
+                                <a href="#" class="link_more">
+                                    <span>Подробнее</span>
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                                         <div class="wrap_new_img">
                                             <img src="images/content/mod_news/new_2.jpg" alt="">
                                         </div>
-                                        <div class="wrap_text">
+                                        <div class="wrap_new_text">
                                             <div class="data">24 мая 2018</div>
                                             <div class="title_new">
                                                 <h3>
@@ -368,12 +368,18 @@
                                                     repudiandae similique vel vitae voluptatibus?
                                                 </p>
                                                 <p>
-                                                    <a href="#" class="link_more">
-                                                        <span>Подробнее</span>
-                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                                    </a>
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+                                                    consequatur cupiditate dolore dolorem ducimus eligendi eveniet,
+                                                    fugiat ipsa minima natus quae quam quibusdam quisquam recusandae,
+                                                    repudiandae similique vel vitae voluptatibus?
                                                 </p>
                                             </div>
+                                        </div>
+                                        <div class="wrap_new_link">
+                                            <a href="#" class="link_more">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -382,7 +388,7 @@
                                         <div class="wrap_new_img">
                                             <img src="images/content/mod_news/new_3.jpg" alt="">
                                         </div>
-                                        <div class="wrap_text">
+                                        <div class="wrap_new_text">
                                             <div class="data">24 мая 2018</div>
                                             <div class="title_new">
                                                 <h3>
@@ -402,12 +408,18 @@
                                                     repudiandae similique vel vitae voluptatibus?
                                                 </p>
                                                 <p>
-                                                    <a href="#" class="link_more">
-                                                        <span>Подробнее</span>
-                                                        <i class="fa fa-angle-right" aria-hidden="true"></i>
-                                                    </a>
+                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda
+                                                    consequatur cupiditate dolore dolorem ducimus eligendi eveniet,
+                                                    fugiat ipsa minima natus quae quam quibusdam quisquam recusandae,
+                                                    repudiandae similique vel vitae voluptatibus?
                                                 </p>
                                             </div>
+                                        </div>
+                                        <div class="wrap_new_link">
+                                            <a href="#" class="link_more">
+                                                <span>Подробнее</span>
+                                                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
