В модуле новостей сделана адаптация

--- a/src/index.html
+++ b/src/index.html
@@ -386,7 +386,8 @@
                                 <div class="col-sm-6 col-lg-6">
                                     <div class="wrap_new">
                                         <div class="wrap_new_img">
-                                            <img src="images/content/mod_news/new_3.jpg" alt="">
+<!--                                            <img src="images/content/mod_news/new_3.jpg" alt="">-->
+                                            <img src="images/content/articles/art_img1.jpg" alt="">
                                         </div>
                                         <div class="wrap_new_text">
                                             <div class="data">24 мая 2018</div>
