В модуле продажи щенков добавлены табы в обратную сторону карточки

--- a/src/index.html
+++ b/src/index.html
@@ -534,18 +534,48 @@
                                     </div><!-- end/.front_card-->
                                     <div class="back_card">
                                         <img src="images/content/mod_puppies/img_card005.jpg" alt="">
-                                        <div class="text">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
-                                                asperiores beatae blanditiis corporis culpa in ipsam ipsum labore
-                                                mollitia nesciunt nihil nisi, nulla perspiciatis qui ratione
-                                                repudiandae, unde, vel velit.
-                                            </p>
-                                            <p>Aliquid harum iusto minus nihil possimus. Accusantium aliquid at
-                                                cupiditate deleniti, eligendi, fuga impedit inventore laborum magni
-                                                natus omnis pariatur porro praesentium quas sit, soluta tempora velit
-                                                veritatis voluptate voluptates.
-                                            </p>
-                                        </div>
+                                        <div class="tabs">
+                                            <!-- Nav tabs -->
+                                            <ul class="nav nav-tabs" role="tablist">
+                                                <li class="active"><a href="#desc" aria-controls="desc" role="tab" data-toggle="tab">Описание</a></li>
+                                                <li><a href="#contacts" aria-controls="contacts" role="tab" data-toggle="tab">Контакты</a></li>
+                                            </ul>
+
+                                            <!-- Tab panes -->
+                                            <div class="tab-content">
+                                                <div role="tabpanel" class="tab-pane active" id="desc">
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                        Asperiores aspernatur assumenda atque consequuntur earum itaque
+                                                        magnam nihil quasi recusandae repudiandae! Accusamus aliquid
+                                                        architecto explicabo facere nemo non omnis temporibus unde.</p>
+                                                    <p>Commodi consequatur laborum molestiae nesciunt nihil quae quaerat
+                                                        soluta totam ut voluptatum? Aliquam ducimus enim quam quo unde
+                                                        voluptate! Aperiam cum ducimus minus obcaecati praesentium
+                                                        quidem sed sequi soluta, tempore.</p>
+                                                    <p>Assumenda beatae, culpa cumque doloribus eaque eius enim error
+                                                        eum ex exercitationem facilis fugit, harum ipsa magnam minima
+                                                        nihil odio officiis optio pariatur perspiciatis praesentium quam
+                                                        quibusdam, quisquam repellat veniam.</p>
+                                                </div>
+                                                <div role="tabpanel" class="tab-pane" id="contacts">
+                                                    <div class="fields_contact">
+                                                        <div class="phone">
+                                                            <i class="fa fa-phone-square" aria-hidden="true"></i>
+                                                            <span>+375 017 345-67-89</span>
+                                                        </div>
+                                                        <div class="mobile">
+                                                            <i class="fa fa-mobile" aria-hidden="true"></i>
+                                                            <span>+375 029 345-67-89</span>
+                                                        </div>
+                                                        <div class="skype">
+                                                            <i class="fa fa-skype" aria-hidden="true"></i>
+                                                            <span>i.petroc</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div><!-- end .tabs-->
                                         <div class="link_more">
                                             <a href="">
                                                 <span>Подробнее</span>
